--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,37 +1,35 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container-fluid row vertical-alignment">
-    <div class="col-lg-12">
-        <div class="col main-section-page ">
-            <h1 class="display-4 text-white-uppercase heading" id="message"></h1>
-            <p class="text-white-uppercase">
-                <a class="btn btn-primary btn-main-sections buttons" href="{% url 'products' %}" target="_blank"
-                    role="button">Shop now!</a>
-            </p>
-        </div>
+  <div class="col-lg-12">
+    <div class="col main-section-page">
+      <h1 class="display-4 text-white-uppercase heading" id="message"></h1>
+      <p class="text-white-uppercase">
+        <a
+          class="btn btn-primary btn-main-sections buttons"
+          href="{% url 'products' %}"
+          target="_blank"
+          role="button"
+          >Shop now!</a
+        >
+      </p>
     </div>
+  </div>
 </div>
-{% endblock %}
-
-{% block postloadjs %}
+{% endblock %} {% block postloadjs %}
 
 <script type="text/javascript">
-    var showText = function (target, message, index, interval) {
-        if (index < message.length) {
-            $(target).append(message[index++]);
-            setTimeout(function () { showText(target, message, index, interval); }, interval);
-        }
+  var showText = function (target, message, index, interval) {
+    if (index < message.length) {
+      $(target).append(message[index++]);
+      setTimeout(function () {
+        showText(target, message, index, interval);
+      }, interval);
     }
+  };
 
-    $(function () {
-        showText("#message", "We provide Smart Control Solutions!", 0, 100);
-    });
-
+  $(function () {
+    showText("#message", "We provide Smart Control Solutions!", 0, 100);
+  });
 </script>
 
 {% endblock %}
-
-
-
