--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,60 +1,72 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="overlay"></div>
 
 <div class="container-fluid">
-    <div class="row" id="row-product">
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-            {% if product.image %}
-            <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}{{product.image.url}}" class="card-img-top imag-fluid"
-                    alt="{{ product.friendly_name }}">
-            </a>
-            {% else %}
-            <a href="{% url 'product_detail' product.id %}">
-                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top imag-fluid" alt="{{ product.friendly_name }}">
-            </a>
-            {% endif %}
-        </div>
-
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
-            <div class="product-title">{{ product.friendly_name }}</div>
-            <div class="product-desc">{{ product.description }}</div>
-            <div class="product-rating"><i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i> <i
-                    class="fa fa-star gold"></i><i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
-            <hr>
-            <div class="product-price">€{{ product.price }}</div>
-            {% if product.category %}
-            <div class="product-price"><i class="fas fa-tags"></i> {{ product.category|capfirst }}</div>
-            {% endif %}
-            {% if product.origin %}
-            <div class="product-price"><i class="fas fa-map-pin"></i> {{ product.origin|capfirst }}</div>
-            {% endif %}
-            {% if product.stock %}
-            <div class="card-body">
-                <h2><span class="badge bg-success"><i class="fas fa-check"></i> In Stock</span></h2>
-            </div>
-            {% else %}
-            <div class="card-body">
-                <h2><span class="badge bg-danger"><i class="fas fa-exclamation-circle"></i> Out-of-stock</span></h2>
-            </div>
-            {% endif %}
-            <hr>
-            <div class="btn-group cart">
-                <button type="button" class="btn-success">
-                    Add to cart
-                </button>
-            </div>
-            <div class="btn-group wishlist">
-                <button type="button" class="btn-danger">
-                    Add to wishlist
-                </button>
-            </div>
-        </div>
+  <div class="row" id="row-product">
+    <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+      {% if product.image %}
+      <a href="{% url 'product_detail' product.id %}">
+        <img
+          src="{{ MEDIA_URL }}{{product.image.url}}"
+          class="card-img-top imag-fluid"
+          alt="{{ product.friendly_name }}"
+        />
+      </a>
+      {% else %}
+      <a href="{% url 'product_detail' product.id %}">
+        <img
+          src="{{ MEDIA_URL }}noimage.png"
+          class="card-img-top imag-fluid"
+          alt="{{ product.friendly_name }}"
+        />
+      </a>
+      {% endif %}
     </div>
-</div>
 
+    <div class="col-12 col-md-6 col-lg-4 offset-lg-1">
+      <div class="product-title">{{ product.friendly_name }}</div>
+      <div class="product-desc">{{ product.description }}</div>
+      <div class="product-rating">
+        <i class="fa fa-star gold"> </i><i class="fa fa-star gold"></i>
+        <i class="fa fa-star gold"></i><i class="fa fa-star gold"></i>
+        <i class="fa fa-star-o"></i>
+      </div>
+      <hr />
+      <div class="product-price">€{{ product.price }}</div>
+      {% if product.category %}
+      <div class="product-price">
+        <i class="fas fa-tags"></i> {{ product.category|capfirst }}
+      </div>
+      {% endif %} {% if product.origin %}
+      <div class="product-price">
+        <i class="fas fa-map-pin"></i> {{ product.origin|capfirst }}
+      </div>
+      {% endif %} {% if product.stock %}
+      <div class="card-body">
+        <h2>
+          <span class="badge bg-success"
+            ><i class="fas fa-check"></i> In Stock</span
+          >
+        </h2>
+      </div>
+      {% else %}
+      <div class="card-body">
+        <h2>
+          <span class="badge bg-danger"
+            ><i class="fas fa-exclamation-circle"></i> Out-of-stock</span
+          >
+        </h2>
+      </div>
+      {% endif %}
+      <hr />
+      <div class="btn-group cart">
+        <button type="button" class="btn-success">Add to cart</button>
+      </div>
+      <div class="btn-group wishlist">
+        <button type="button" class="btn-danger">Add to wishlist</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
