--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,12 +1,9 @@
-{% extends "account/base.html" %}
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans
+"Sign Out" %}{% endblock %} {% block content %}
 
-{% load i18n %}
-
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
-{% block content %}
-
-<div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+<div
+  class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto"
+>
   <div class="card-logout card0 border-0">
     <div class="row d-flex">
       <div class="col-lg-12">
@@ -15,11 +12,16 @@
             <h1>{% trans "Sign Out" %}</h1>
             <p>{% trans 'Are you sure you want to sign out?' %}</p>
             <form method="post" action="{% url 'account_logout' %}">
-              {% csrf_token %}
-              {% if redirect_field_value %}
-              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+              {% csrf_token %} {% if redirect_field_value %}
+              <input
+                type="hidden"
+                name="{{ redirect_field_name }}"
+                value="{{ redirect_field_value }}"
+              />
               {% endif %}
-              <button type="submit" class="btn btn-red text-center">{% trans 'Sign Out' %}</button>
+              <button type="submit" class="btn btn-red text-center">
+                {% trans 'Sign Out' %}
+              </button>
             </form>
           </div>
         </div>
@@ -29,8 +31,3 @@
 </div>
 
 {% endblock %}
-
-
-
-
-
