--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,27 +1,36 @@
-{% extends "account/base.html" %}
+{% extends "account/base.html" %} {% load i18n %} {% block head_title %}{% trans
+"Signup" %}{% endblock %} {% block content %}
 
-{% load i18n %}
-
-{% block head_title %}{% trans "Signup" %}{% endblock %}
-
-{% block content %}
-
-<div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+<div
+  class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto"
+>
   <div class="card-login card0 border-0">
     <div class="row d-flex">
       <div class="col-lg-12">
         <div class="card2 card-login border-0 px-4 py-5">
           <div class="row mb-4 px-3">
             <h1>{% trans "Sign Up" %}</h1>
-            <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}"
-                class="text-danger links">sign in</a>.{% endblocktrans %}</p>
-            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-              {% csrf_token %}
-              {{ form.as_p }}
-              {% if redirect_field_value %}
-              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            <p>
+              {% blocktrans %}Already have an account? Then please
+              <a href="{{ login_url }}" class="text-danger links">sign in</a>.{%
+              endblocktrans %}
+            </p>
+            <form
+              class="signup"
+              id="signup_form"
+              method="post"
+              action="{% url 'account_signup' %}"
+            >
+              {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
+              <input
+                type="hidden"
+                name="{{ redirect_field_name }}"
+                value="{{ redirect_field_value }}"
+              />
               {% endif %}
-              <button type="submit" class="btn btn-blue text-center">{% trans "Sign Up" %}</button>
+              <button type="submit" class="btn btn-blue text-center">
+                {% trans "Sign Up" %}
+              </button>
             </form>
           </div>
         </div>
