Create cart app, add urls, view and template

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                 </li>
 
                 <li class="list-inline-item">
-
+                    <a href="{% url 'view_cart' %}">
                   <span class="shopping-basket-icon"> <span class="badge rounded-pill bg-warning">
                     <i class="fas fa-shopping-basket"></i>
                     {% if grand_total %}
@@ -114,6 +114,7 @@
                     €0.00
                     {% endif %}
                   </span></span>
+                </a>
                 </li>
 
 
