--- a/templates/base.html
+++ b/templates/base.html
@@ -192,7 +192,7 @@
 
       <div class="col-lg-4 col-md-4 text-center">
         <p class="text-white-uppercase lead">FREE HOME DELIVERY ON ORDERS
-          OVER XX</p>
+          OVER €{{ free_delivery_threshold }}!</p>
       </div>
 
       <div class="col-lg-4 col-md-4 text-center">
