Add info badge in FREE DELIVERY THRESHOLD on footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,7 @@
 
       <div class="col-lg-4 col-md-4 text-center">
         <p class="text-white-uppercase lead">FREE HOME DELIVERY ON ORDERS
-          OVER €{{ free_delivery_threshold }}!</p>
+          OVER <span class="badge badge-footer rounded-pill bg-info text-dark text-white-uppercase lead">€{{ free_delivery_threshold }}!</span> </p>
       </div>
 
       <div class="col-lg-4 col-md-4 text-center">
