Add javascript/jquery functionfor quantity button in product details page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,9 @@
     </div>
   </div>
 </div>
-{% endblock %} {% block postloadjs %}
+{% endblock %} 
+
+{% block postloadjs %}
 
 <script type="text/javascript">
   var showText = function (target, message, index, interval) {
