--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -60,26 +60,34 @@
       {% endif %}
       <hr />
 
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
-          <h2>Simple Quantity increment buttons with Javascript </h2>
-              
-              
-                              <div class="col-lg-2">
-                                              <div class="input-group">
-                                          <span class="input-group-btn">
-                                              <button type="button" class="quantity-left-minus btn btn-danger btn-number"  data-type="minus" data-field="">
-                                                <span class="glyphicon glyphicon-minus"></span>
-                                              </button>
-                                          </span>
-                                          <input type="text" id="quantity" name="quantity" class="form-control input-number" value="10" min="1" max="100">
-                                          <span class="input-group-btn">
-                                              <button type="button" class="quantity-right-plus btn btn-success btn-number" data-type="plus" data-field="">
-                                                  <span class="glyphicon glyphicon-plus"></span>
-                                              </button>
-                                          </span>
-                                      </div>
-                              </div>
+          <h2>Qty:</h2>
+
+                               <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
         </div>
       </div>
 
@@ -96,29 +104,6 @@
 {% endblock %}
 
 {% block postloadjs %}
-
-<script type="text/javascript">
-var quantity=0;
-   $('.quantity-right-plus').click(function(e){
-        // Stop acting like a button
-        e.preventDefault();
-        // Get the field name
-        var quantity = parseInt($('#quantity').val());
-        // If is not undefined
-            $('#quantity').val(quantity + 1);
-    });
-
-    $('.quantity-left-minus').click(function(e){
-        // Stop acting like a button
-        e.preventDefault();
-        // Get the field name
-        var quantity = parseInt($('#quantity').val());
-        // If is not undefined
-            // Increment
-            if(quantity>0){
-            $('#quantity').val(quantity - 1);
-            }
-    });
-</script>
-
+{{ block.super }}
+{% include 'products/includes/quantity_button.html' %}
 {% endblock %}
