Disabled add to cart button if product is out-of stock

--- a/products/templates/products/includes/quantity_button.html
+++ b/products/templates/products/includes/quantity_button.html
@@ -41,4 +41,12 @@
        var itemId = $(this).data('item_id');
        handleEnableDisable(itemId);
     });
+
+
+    // Disabled add to cart button
+    $('#disabled-button').hover(function(){
+    $(this).css("background-color", "yellow");
+    }, function(){
+     $(this).css("background-color", "pink");
+    });
 </script>
