Add jquery background color effect to search form

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,4 +34,10 @@
   });
 </script>
 
+<script type="text/javascript">
+  $( "#target" ).keydown(function(){
+    $("#target").css("background-color", "#FED8b1");
+  });
+</script>
+
 {% endblock %}
