--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% load static %} {% block content %}
+{% extends "base.html" %} 
+{% load static %} 
+{% block content %}
 <div class="overlay"></div>
 
 <div class="container-fluid">
@@ -37,13 +39,11 @@
       <div class="product-price">
         <i class="fas fa-tags"></i> {{ product.category|capfirst }}
       </div>
-      {% endif %} 
-      {% if product.origin %}
+      {% endif %} {% if product.origin %}
       <div class="product-price">
         <i class="fas fa-map-pin"></i> {{ product.origin|capfirst }}
       </div>
-      {% endif %} 
-      {% if product.stock %}
+      {% endif %} {% if product.stock %}
       <div class="card-body">
         <h2>
           <span class="badge bg-success"
@@ -66,30 +66,42 @@
         <div class="row">
           <h2>Qty:</h2>
 
-                               <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
+          <div class="form-group w-50">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <button
+                  class="decrement-qty btn btn-black rounded-0"
+                  data-item_id="{{ product.id }}"
+                  id="decrement-qty_{{ product.id }}"
+                >
+                  <span class="icon">
+                    <i class="fas fa-minus"></i>
+                  </span>
+                </button>
+              </div>
+              <input
+                class="form-control qty_input"
+                type="number"
+                name="quantity"
+                value="1"
+                min="1"
+                max="99"
+                data-item_id="{{ product.id }}"
+                id="id_qty_{{ product.id }}"
+              />
+              <div class="input-group-append">
+                <button
+                  class="increment-qty btn btn-black rounded-0"
+                  data-item_id="{{ product.id }}"
+                  id="increment-qty_{{ product.id }}"
+                >
+                  <span class="icon">
+                    <i class="fas fa-plus"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -100,7 +112,14 @@
       {% else %}
       <div class="btn-group cart" id="wrapper-disabled">
         <div id="overlay-disabled"></div>
-        <button type="button" class="btn-disabled" id="disabled-button" disabled >Add to cart</button>
+        <button
+          type="button"
+          class="btn-disabled"
+          id="disabled-button"
+          disabled
+        >
+          Add to cart
+        </button>
       </div>
       {% endif %}
       <div class="btn-group wishlist">
@@ -110,9 +129,8 @@
   </div>
 </div>
 
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_button.html' %}
+{% endblock %} 
+{% block postloadjs %} 
+{{ block.super }} 
+{% include 'products/includes/quantity_button.html' %} 
 {% endblock %}
