Make jquery script for search form accessible from templates/includes

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,26 +18,6 @@
 {% endblock %} 
 
 {% block postloadjs %}
-
-<script type="text/javascript">
-  var showText = function (target, message, index, interval) {
-    if (index < message.length) {
-      $(target).append(message[index++]);
-      setTimeout(function () {
-        showText(target, message, index, interval);
-      }, interval);
-    }
-  };
-
-  $(function () {
-    showText("#message", "We provide Smart Control Solutions!", 0, 100);
-  });
-</script>
-
-<script type="text/javascript">
-  $( "#target" ).keydown(function(){
-    $("#target").css("background-color", "#FED8b1");
-  });
-</script>
-
+{{ block.super }} 
+  {% include 'includes/main_js.html' %} 
 {% endblock %}
