--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -133,4 +133,6 @@
 {% block postloadjs %} 
 {{ block.super }} 
 {% include 'products/includes/quantity_button.html' %} 
+{% include 'includes/main_js.html' %} 
 {% endblock %}
+
