--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -79,3 +79,8 @@
   </div>
 </div>
 {% endblock %}
+
+{% block postloadjs %}
+{{ block.super }} 
+  {% include 'includes/main_js.html' %} 
+{% endblock %}
