Change main message font color to #11426e

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -240,7 +240,7 @@ footer {
   font-weight: bold;
   line-height: 1.4;
   text-align: center;
-  color: #fff;
+  color: #11426e;
   margin-top: 30vh;
 }
 
