Add shopping cart background color to #FECC67 and font-color to #11426e

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -23,7 +23,7 @@
             <span>
                 <i class="fas fa-arrow-circle-left navegation-arrows"></i>
             </span>
-            <span class="text-uppercase">
+            <span class="text-uppercase-blue">
                 Go back to store
             </span>
         </a>
