--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
 
                 <li class="list-inline-item">
                     <a href="{% url 'view_cart' %}">
-                  <span class="shopping-basket-icon"> <span class="badge rounded-pill bg-warning">
+                  <span class="shopping-basket-icon"> <span class="badge rounded-pill bg-shopping-cart">
                     <i class="fas fa-shopping-basket"></i>
                     <p class="p-basket">
                     {% if product_count %}
