Change footer background from black to #11426e

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -119,7 +119,7 @@ a:hover {
 
 
 footer {
-  background-color: black;
+  background-color: #11426e;
   max-height: auto;
   min-height: 15vh;
   overflow: hidden;
