--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,15 +6,16 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 16px;
   background: url("/media/home.jpeg") no-repeat center center fixed;
   background-size: cover;
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
 }
 
 a {
   color: #fff;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 18px;
 }
 
@@ -242,7 +243,7 @@ footer {
 
 .heading {
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: 300;
   line-height: 1.4;
   text-align: center;
   color: #11426e;
