Add shopping cart to the context manager

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -16,7 +16,7 @@
 
     <div class="row">
         {% if cart_items %}
-
+            {{ cart_items }}
         {% else %}
         <p class="lead mb-5">Your shopping cart is empty.</p>
         <a class="links" href="{% url 'products' %}">
