--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
                     <i class="fas fa-shopping-basket"></i>
                     <p class="p-basket">
                     {% if product_count %}
-                    ${{ product_count }}
+                    {{ product_count }}
                     {% else %}
                     0
                     {% endif %}
@@ -120,7 +120,7 @@
                   <p class="p-basket">
                     Total:
                     {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
+                    €{{ grand_total|floatformat:2 }}
                     {% else %}
                     €0.00
                     {% endif %}
