Change 'Our Products' tag to 'Catalog' in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    Our products
+                    Catalog
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="{% url 'products' %}">All products</a></li>
