--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -9,14 +9,69 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 mb-4>Shopping Cart</h2>
+            <h2 mb-4> Your shopping Cart</h2>
             <hr>
         </div>
     </div>
 
     <div class="row">
         {% if cart_items %}
-            {{ cart_items }}
+        <div class="card card-cart">
+            <div class="row">
+                <div class="col-md-8 cart">
+                    <div class="title">
+                        <div class="row">
+                            <div class="col">
+                                <h4><b> Your shopping cart</b></h4>
+                            </div>
+                            <div class="col align-self-center text-right text-muted">{{ product_count }} items</div>
+                        </div>
+                    </div>
+                    {% for item in cart_items %}
+                    {% with product=item.product %}
+                    <div class="row border-top border-bottom">
+                        <div class="row main align-items-center">
+                            <div class="col-2"> <img
+                                src="{{ MEDIA_URL }}{{product.image.url}}"
+                                class="card-img-top imag-fluid"
+                                alt="{{ product.friendly_name }}"
+                              /></div>
+                            <div class="col">
+                                <div class="row text-muted">{{ product.friendly_name }}</div>
+                            </div>
+                            <div class="col"> <a href="#">-</a><a href="#" class="border">1</a><a href="#">+</a> </div>
+                            <div class="col">€{{ product.price }} <span class="close">&#10005;</span></div>
+                        </div>
+                    </div>
+                    {% endwith %}
+                    {% endfor %}
+
+                    <div class="back-to-shop"><a href="#">&leftarrow;</a><span class="text-muted">Back to shop</span></div>
+                </div>
+                <div class="col-md-4 summary">
+                    <div>
+                        <h5><b>Summary</b></h5>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col" style="padding-left:0;">ITEMS {{ product_count }}</div>
+                        <div class="col text-right">€{{ grand_total|floatformat:2 }}</div>
+                    </div>
+                    <form>
+                        <p>SHIPPING</p> <select>
+                            <option class="text-muted">Standard-Delivery- &euro;5.00</option>
+                        </select>
+                        <p>GIVE CODE</p> <input id="code" placeholder="Enter your code">
+                    </form>
+                    <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+                        <div class="col">TOTAL PRICE</div>
+                        <div class="col text-right">&euro; 137.00</div>
+                    </div> <button class="btn">CHECKOUT</button>
+                </div>
+            </div>
+        </div>
+
+            
         {% else %}
         <p class="lead mb-5">Your shopping cart is empty.</p>
         <a class="links" href="{% url 'products' %}">
