--- a/static/css/base.css
+++ b/static/css/base.css
@@ -256,10 +256,14 @@ footer {
 }
 
 .row {
-  margin: 10px 0px 10px 0px;
+  margin: 0px 0px 0px 0px;
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
   padding: 0px 0px 0px 0px;
+}
+
+.row-cart {
+margin: 10px 0px 10px 0px;
 }
 
 .nav-link {
