--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -107,11 +107,11 @@
           <input type="hidden" name="redirect_url" value="{{ request.path }}">
         </div>
         {% if product.stock %}
-        <div class="btn-group cart">
+        <div class="btn-group">
           <button type="submit" class="btn-success">Add to cart</button>
         </div>
         {% else %}
-        <div class="btn-group cart" id="wrapper-disabled">
+        <div class="btn-group" id="wrapper-disabled">
           <div id="overlay-disabled"></div>
           <button
             type="button"
